--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     <!-- Space for text above videos -->
     <div class="content has-text-justified">
       <p class="has-text-centered">
-        <!-- Text description above the simulation videos can be added here -->
+        We benchmarked DiffOG and several baselines across 11 simulation tasks. DiffOG consistently improves action trajectories, making them smoother and more constrained, while preserving alignment with the original demonstration distribution, thereby preventing policy performance degradation.
       </p>
     </div>
 
@@ -389,9 +389,9 @@
     <!-- Space for text below videos -->
     <div class="content has-text-justified mt-4">
       <p class="has-text-centered" style="font-weight: 400; color: #666; font-family: 'Noto Sans', sans-serif; border-top: 1px dotted #e5e5e5; padding-top: 12px; margin-top: 20px; font-size: 0.95em;">
-        <sup>1</sup>Robomimic &nbsp;&nbsp;
-        <sup>2</sup>Diffusion Policy &nbsp;&nbsp;
-        <sup>3</sup>MetaWorld &nbsp;&nbsp;
+        <a href="https://robomimic.github.io/"><sup>1</sup>Robomimic</a> &nbsp;&nbsp;
+        <a href="https://diffusion-policy.cs.columbia.edu/"><sup>2</sup>Diffusion Policy</a> &nbsp;&nbsp;
+        <a href="https://meta-world.github.io/"><sup>3</sup>Metaworld</a> &nbsp;&nbsp;
         <!-- Space for adding links later -->
       </p>
     </div>
@@ -414,7 +414,7 @@
       <!-- Move The Stack.mp4 -->
       <div class="column is-half">
         <div class="content has-text-centered">
-          <h4 class="title is-5">Stack Movement</h4>
+          <h4 class="title is-5">Illustration of the Task</h4>
           <video id="move-stack-video" autoplay muted loop controls playsinline height="100%">
             <source src="./static/videos/real/Move The Stack.mp4" type="video/mp4">
           </video>
@@ -424,7 +424,7 @@
       <!-- Stack Rollout.mp4 -->
       <div class="column is-half">
         <div class="content has-text-centered">
-          <h4 class="title is-5">Stack Rollout</h4>
+          <h4 class="title is-5">Rollouts of DiffOG</h4>
           <video id="stack-rollout-video" autoplay muted loop controls playsinline height="100%">
             <source src="./static/videos/real/Stack Rollout.mp4" type="video/mp4">
           </video>
@@ -444,7 +444,7 @@
       <!-- Stack Comp.mp4 -->
       <div class="column is-half">
         <div class="content has-text-centered">
-          <h4 class="title is-5">Stack Comparison</h4>
+          <h4 class="title is-5">Comparison with the Base Policy</h4>
           <video id="stack-comp-video" autoplay muted loop controls playsinline height="100%">
             <source src="./static/videos/real/Stack Comp.mp4" type="video/mp4">
           </video>
@@ -454,7 +454,7 @@
       <!-- Stack Fail.mp4 -->
       <div class="column is-half">
         <div class="content has-text-centered">
-          <h4 class="title is-5">Stack Failure Case</h4>
+          <h4 class="title is-5">Typical Failure Cases of Baselines</h4>
           <video id="stack-fail-video" autoplay muted loop controls playsinline height="100%">
             <source src="./static/videos/real/Stack Fail.mp4" type="video/mp4">
           </video>
@@ -480,7 +480,7 @@
       <!-- Arrange The Desk.mp4 -->
       <div class="column is-half">
         <div class="content has-text-centered">
-          <h4 class="title is-5">Desk Arrangement</h4>
+          <h4 class="title is-5">Illustration of the Task</h4>
           <video id="arrange-desk-video" autoplay muted loop controls playsinline height="100%">
             <source src="./static/videos/real/Arrange The Desk.mp4" type="video/mp4">
           </video>
@@ -490,7 +490,7 @@
       <!-- Desk Rollout.mp4 -->
       <div class="column is-half">
         <div class="content has-text-centered">
-          <h4 class="title is-5">Desk Rollout</h4>
+          <h4 class="title is-5">Rollouts of DiffOG</h4>
           <video id="desk-rollout-video" autoplay muted loop controls playsinline height="100%">
             <source src="./static/videos/real/Desk Rollout.mp4" type="video/mp4">
           </video>
@@ -510,7 +510,7 @@
       <!-- Desk Cc.mp4 -->
       <div class="column is-half">
         <div class="content has-text-centered">
-          <h4 class="title is-5">Desk CC</h4>
+          <h4 class="title is-5">Typical Failure Cases of Constraint Clipping</h4>
           <video id="desk-cc-video" autoplay muted loop controls playsinline height="100%">
             <source src="./static/videos/real/Desk Cc.mp4" type="video/mp4">
           </video>
@@ -520,7 +520,7 @@
       <!-- Desk Po.mp4 -->
       <div class="column is-half">
         <div class="content has-text-centered">
-          <h4 class="title is-5">Desk PO</h4>
+          <h4 class="title is-5">Typical Failure Cases of Penalty-Based optimization</h4>
           <video id="desk-po-video" autoplay muted loop controls playsinline height="100%">
             <source src="./static/videos/real/Desk Po.mp4" type="video/mp4">
           </video>
@@ -533,15 +533,17 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title is-3 has-text-centered">BibTeX</h2>
-    <pre style="background: #f8f8f8; border-radius: 6px; box-shadow: 0 1px 6px rgba(0,0,0,0.05); font-family: 'Castoro', monospace;"><code>@misc{xu2025diffog,
-  title={{DiffOG}: Differentiable Policy Trajectory Optimization with Generalizability},
-  author={Zhengtong Xu and Zichen Miao and Qiang Qiu and Zhe Zhang and Yu She},
-  year={2025},
-  eprint={2504.13807},
-  archivePrefix={arXiv},
-  primaryClass={cs.RO},
-  url={https://arxiv.org/abs/2504.13807},
-}</code></pre>
+    <pre style="background: #f8f8f8; border-radius: 6px; box-shadow: 0 1px 6px rgba(0,0,0,0.05); font-family: 'Castoro', monospace;"><code>
+      @misc{xu2025diffog,
+        title={{DiffOG}: Differentiable Policy Trajectory Optimization with Generalizability},
+        author={Zhengtong Xu and Zichen Miao and Qiang Qiu and Zhe Zhang and Yu She},
+        year={2025},
+        eprint={2504.13807},
+        archivePrefix={arXiv},
+        primaryClass={cs.RO},
+        url={https://arxiv.org/abs/2504.13807},
+      }
+    </code></pre>
   </div>
 </section>
 
